# excalidraw-desktop

./: .gitignore  LICENSE  README.md  THIRD-PARTY-NOTICES.md  index.html  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: AiDraft.tsx  App.tsx  LibraryPanel.tsx  Titlebar.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
