[package]
name = "excalidraw-desktop"
version = "0.5.1"
edition = "2021"

[lib]
name = "excalidraw_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-persisted-scope = "=2.3.7"
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
trash = "5.2.6"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

# OS keychain for AI-provider API keys (Windows Credential Manager / macOS
# Keychain). Not included on Linux, which would need libsecret at runtime; there
# the app falls back to localStorage.
[target."cfg(any(target_os = \"macos\", windows))".dependencies]
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native"] }
